# Church-Calendar

./: .gitignore
backend/app/: db.sqlite3  pyproject.toml  requirements.txt
backend/app/app/: settings.py  urls.py  views.py
backend/app/authentication/: models.py  serializers.py  urls.py  views.py
backend/app/authentication/migrations/: 0001_initial.py  0002_customuser_full_name.py  0002_remove_customuser_position_customuser_fcm_token_and_more.py  0003_alter_customuser_username.py  0003_customuser_created_at_customuser_updated_at.py  0004_alter_customuser_description.py  0004_alter_customuser_full_name.py  0005_alter_customuser_email_alter_customuser_full_name_and_more.py  0006_customuser_born_at.py  0007_customuser_timezone.py  0008_alter_customuser_timezone.py  0009_alter_customuser_options.py  (+1 more)
backend/app/church_group/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/app/event/: mixins.py  models.py  paginators.py  serializers.py  throttles.py  urls.py  views.py
backend/app/event/tests/: base.py  (+1 more)
backend/app/events/: models.py  serializers.py  urls.py  views.py
backend/app/group/: models.py  serializers.py  urls.py  views.py
backend/app/liga/: admin.py  models.py  serializers.py  urls.py  views.py
backend/app/notification/: admin.py  firebase.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/app/reservation/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
backend/app/static/: versions.json
backend/app/user/: paginators.py  permissions.py  serializers.py  urls.py  views.py
(+218 files in other folders)
